--- a/2048game_css.css
+++ b/2048game_css.css
@@ -15,20 +15,21 @@ font-size: 15px;
 .inline{
 display: inline-block;
 }
-.btndefault {
+.score {
   
   border-radius: 10px;
   background: grey;
   border: 3px solid white;
-  float: right;
-  margin-top: 20px;
-  margin-right: 40px;
+  float: left;
+}
+
+.newGame {
+  float: right;	
 }
 .textinside{
+
 color: white;
 font-weight: bold;
-float: center;
-align: center;
 }
 .tableborder{
  border-radius: 40px;
@@ -89,6 +90,7 @@ color: #8f7a66;
     text-align: center;
     font-weight: bold;
     z-index: 10;
+	vertical-align: middle;
     font-size: 55px;
     width: 129.20px;
   height: 129.20px;	
@@ -97,11 +99,11 @@ color: #8f7a66;
 @media screen and (max-height: 768px) and (min-width: 481px){
 .tile-inner {
     border-radius: 3px;
-    
+    vertical-align: middle;
     text-align: center;
     font-weight: bold;
     z-index: 10;
-    font-size: 55px;
+    font-size: 45px;
     width: 96.20px;
   height: 96.20px;	
   }
@@ -109,11 +111,11 @@ color: #8f7a66;
   @media screen and (max-width: 520px){
 .tile-inner {
     border-radius: 3px;
-    
+    vertical-align: middle;
     text-align: center;
     font-weight: bold;
     z-index: 10;
-    font-size: 45px;
+    font-size: 35px;
     width: 56.20px;
   height: 56.20px;	
   }
@@ -162,4 +164,15 @@ overflow-x: hidden;}
   border-color: #2e6da4;
   font-size: 17px;
   font-weight: bold;
+}
+.scoredivtext{
+font-size: 18px;
+  font-weight: bold;
+  color: #8f7a66;
+  text-align: center;
+}
+
+.center {
+     float: none;
+     margin: 0 auto;
 }
